feat: 다음 턴 관리 구현, 보드 생성 방법 변경